[gd_scene load_steps=18 format=2]

[ext_resource path="res://Globals.gd" type="Script" id=1]
[ext_resource path="res://fonts/cave_font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/cavern.tres" type="DynamicFont" id=3]
[ext_resource path="res://sound/music.mp3" type="AudioStream" id=4]
[ext_resource path="res://art/music-on.png" type="Texture" id=5]
[ext_resource path="res://art/pause.png" type="Texture" id=6]
[ext_resource path="res://sound/end.mp3" type="AudioStream" id=7]
[ext_resource path="res://art/lt1.png" type="Texture" id=8]
[ext_resource path="res://art/up2.png" type="Texture" id=9]
[ext_resource path="res://art/up1.png" type="Texture" id=10]
[ext_resource path="res://art/lt2.png" type="Texture" id=11]
[ext_resource path="res://art/rt1.png" type="Texture" id=12]
[ext_resource path="res://art/rt2.png" type="Texture" id=13]
[ext_resource path="res://art/regresar.png" type="Texture" id=16]
[ext_resource path="res://art/continue.png" type="Texture" id=17]
[ext_resource path="res://art/salir.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0.894118, 0.878431, 0.309804, 1 )
font_data = ExtResource( 2 )

[node name="Globals" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="HUD"]
margin_left = 12.0
margin_top = 12.0
margin_right = 77.0
margin_bottom = 25.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Level: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="HUD"]
margin_left = 130.0
margin_top = 12.0
margin_right = 77.0
margin_bottom = 25.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time" type="Label" parent="HUD"]
margin_left = 920.0
margin_top = 12.0
margin_right = 980.0
margin_bottom = 24.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "Left: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vidas" type="Label" parent="HUD"]
margin_left = 800.0
margin_top = 12.0
margin_right = 800.0
margin_bottom = 24.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "Lifes: 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Area2D" parent="."]

[node name="TouchUp" type="TouchScreenButton" parent="Buttons"]
position = Vector2( 64, 480 )
normal = ExtResource( 10 )
pressed = ExtResource( 9 )
passby_press = true
action = "ui_up"

[node name="TouchLeft" type="TouchScreenButton" parent="Buttons"]
position = Vector2( 700, 480 )
normal = ExtResource( 8 )
pressed = ExtResource( 11 )
passby_press = true
action = "ui_left"

[node name="TouchRight" type="TouchScreenButton" parent="Buttons"]
position = Vector2( 855, 480 )
normal = ExtResource( 12 )
pressed = ExtResource( 13 )
passby_press = true
action = "ui_right"

[node name="Music" type="TouchScreenButton" parent="Buttons"]
position = Vector2( 370, 7 )
normal = ExtResource( 5 )
passby_press = true

[node name="Pause" type="TouchScreenButton" parent="Buttons"]
pause_mode = 2
position = Vector2( 280, 7 )
normal = ExtResource( 6 )
passby_press = true

[node name="Continue" type="TouchScreenButton" parent="Buttons"]
pause_mode = 2
visible = false
position = Vector2( 350, 130 )
normal = ExtResource( 17 )

[node name="GoBack" type="TouchScreenButton" parent="Buttons"]
pause_mode = 2
visible = false
position = Vector2( 350, 240 )
normal = ExtResource( 16 )

[node name="Quit" type="TouchScreenButton" parent="Buttons"]
pause_mode = 2
visible = false
position = Vector2( 350, 350 )
normal = ExtResource( 18 )

[node name="game_timer" type="Timer" parent="."]
wait_time = 33.0
one_shot = true
autostart = true

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0

[node name="end" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0

[connection signal="pressed" from="Buttons/Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="Buttons/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Buttons/GoBack" to="." method="_on_GoBack_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="game_timer" to="." method="_on_game_timer_timeout"]
